--- a/Assignment3/.vscode/settings.json
+++ b/Assignment3/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "*.jar",
-        "xchart-3.8.0.jar"
+        "xchart-3.8.7.jar",
+        "source_code\\BST\\xchart-3.8.7.jar"
     ]
 }
