add & swap methods

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Assignment3\\source_code\\HashTable",
         "Assignment3\\source_code\\BST",
         "Assignment3",
-        "Assignment3\\source_code"
+        "Assignment3\\source_code",
+        "Assignment3\\source_code\\Heap"
     ]
 }
